edits and figure update

--- a/bibliography.tex
+++ b/bibliography.tex
@@ -60,5 +60,7 @@ detector in the CNGS neutrino beam'', ICARUS Collaboration, Eur. Phys. J. C (201
 \bibitem{argoneut_eg} "Results from and Status of ArgoNeuT and MicroBooNE" by 
 A. Szelc., conference: \url{http://neutrino2014.bu.edu/}.
 
+\bibitem{bueno}
+``Nucleon Decay Searches with large Liquid Argon TPC Detectors at Shallow Depths: atmospheric neutrinos and cosmogenic backgrounds'', A.Bueno, Z.Dai, Y.Ge, M.Laffranchi, A.J.Melgarejo, A.Meregaglia, S.Navas, A.Rubbia, JHEP 0704:041, (2007).
 
 \end{thebibliography}
